Adjust style of UML blocks - Style background like code blocks - Ensure diagrams overflow instead of just scaling really small - Add nicer scrollbar - Expand UML diagrams in mobile view like code blocks.

--- a/docs/src/scss/extensions/_tabbed.scss
+++ b/docs/src/scss/extensions/_tabbed.scss
@@ -30,6 +30,15 @@
                 }
               }
             }
+
+            div.mermaid {
+              > div {
+                margin-right: px2rem(-12px);
+                margin-left: px2rem(-12px);
+                padding-right: px2rem(12px);
+                padding-left: px2rem(12px);
+              }
+            }
           }
         }
       }
